update for test app

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,13 +3,14 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "module": "es2015",
+    "sourceMap": true,
     "baseUrl": "",
     "types": []
   },
   "exclude": [
     "test.ts",
     "**/*.spec.ts",
-    "./firebase-backend/functions/api.ts",
+    "./firebase-backend/functions/index.ts",
     "./firebase-backend/functions/test.ts"
   ]
 }
